Amarok ChangeLog
================
(C) 2002-2009 the Amarok authors.


VERSION 2.2-beta1
  FEATURES:
    * Allow sorting in the bookmark manager.
    * Allow filtering in the bookmark manager.
    * Add colums to the bookmark manger and make it possible to edit items 
      inline.
    * Add a small bookmark menu to the browser breadcrumb bar allowing for
      navigation to a bookmark, as well as creating a new bookmark based on
      the current "view" or calling up the bookmark manager.
    * Magnatune.com store: Allow redownloads of any previous Magnatune.com 
      purchases by a given email, not just purchases made from a specific 
      instalation of Amarok.
    * Inline editing of lyrics from the context applet. (BR 201342)
    * Ipod initialization support when failed to read an iPod database.
    * Improvements to the "Show Cover" dialog. Resizes to match the image, auto
      centers on screen, correctly handles images too large for the screen and
      supports zooming using the mouse wheel. Patch thanks to Pascal Pollet 
      <pascal@bongosoft.de> (BR 175901)
    * Automatically expand collection browser search results and make the
      results keyboard accessible. Patch thanks to Tuomas Nurmi
      <tuomas@norsumanageri.org>. (BR 172379)
    * Audio CD support. Audio CDs now show up as a separate collection and
      tracks from the CD can be freely mixed with any other tracks in the 
      playlist. Using the "Copy to Collection" menu its possible to copy (rip)
      tracks directly to the local (or any other writable) collection. 
    * Sortable playlist.
    * Improved media device support.
    * Video applet to show videos from YouTube, Dailymotion and Vimeo.
      The video can be appended to the playlist, and rendered within the applet.
    * Photo applet to show images from Flickr, with customizable animations.
    * Customizable user interface using dock widgets.
    * Support for external MySQL database. See